// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`callback error message 1`] = `
.c4 {
  display: flex;
  align-items: center;
  justify-content: center;
  border-radius: 2px;
  box-sizing: border-box;
  box-shadow: 0 1px 4px rgba(0,0,0,0.24);
  margin: 0 0 24px 0;
  min-height: 40px;
  padding: 8px 16px;
  overflow: auto;
  word-break: break-word;
  line-height: 1.5;
  background: #f50057;
  color: #FFFFFF;
  margin-top: 8px;
  margin-bottom: 24px;
}

.c4 a {
  color: #FFFFFF;
}

.c1 {
  box-sizing: border-box;
  color: #324148;
  background-color: #FFFFFF;
  margin-left: auto;
  margin-right: auto;
  margin-top: 40px;
  margin-bottom: 40px;
  padding: 32px;
  width: 540px;
}

.c2 {
  box-shadow: 0 4px 16px rgba(0,0,0,0.24);
  border-radius: 8px;
}

.c0 {
  display: block;
  outline: none;
  margin-top: 40px;
  margin-bottom: 40px;
  margin-left: auto;
  margin-right: auto;
  max-width: 200px;
  max-height: 120px;
}

.c3 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 28px;
  line-height: 32px;
  margin-bottom: 24px;
  text-align: center;
}

.c5 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 16px;
  line-height: 32px;
  text-align: center;
}

.c6 {
  color: #03a9f4;
}

<div>
  <img
    class="c0"
    src="file_stub"
  />
  <div
    class="c1 c2"
    color="text.onLight"
    width="540px"
  >
    <div
      class="c3"
    >
      Login Unsuccessful
    </div>
    <div
      class="c4"
    >
      custom message
    </div>
     
    <div
      class="c5"
    >
      <a
        class="c6"
        href="/web/login"
      >
        Please attempt to log in again.
      </a>
    </div>
  </div>
</div>
`;

exports[`default error message 1`] = `
.c4 {
  display: flex;
  align-items: center;
  justify-content: center;
  border-radius: 2px;
  box-sizing: border-box;
  box-shadow: 0 1px 4px rgba(0,0,0,0.24);
  margin: 0 0 24px 0;
  min-height: 40px;
  padding: 8px 16px;
  overflow: auto;
  word-break: break-word;
  line-height: 1.5;
  background: #f50057;
  color: #FFFFFF;
  margin-top: 8px;
  margin-bottom: 24px;
}

.c4 a {
  color: #FFFFFF;
}

.c1 {
  box-sizing: border-box;
  color: #324148;
  background-color: #FFFFFF;
  margin-left: auto;
  margin-right: auto;
  margin-top: 40px;
  margin-bottom: 40px;
  padding: 32px;
  width: 540px;
}

.c2 {
  box-shadow: 0 4px 16px rgba(0,0,0,0.24);
  border-radius: 8px;
}

.c0 {
  display: block;
  outline: none;
  margin-top: 40px;
  margin-bottom: 40px;
  margin-left: auto;
  margin-right: auto;
  max-width: 200px;
  max-height: 120px;
}

.c3 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 28px;
  line-height: 32px;
  margin-bottom: 24px;
  text-align: center;
}

.c5 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 16px;
  line-height: 32px;
  text-align: center;
}

.c6 {
  color: #03a9f4;
}

<div>
  <img
    class="c0"
    src="file_stub"
  />
  <div
    class="c1 c2"
    color="text.onLight"
    width="540px"
  >
    <div
      class="c3"
    >
      Login Unsuccessful
    </div>
    <div
      class="c4"
    >
      unable to login, please check Teleport's log for details
    </div>
     
    <div
      class="c5"
    >
      <a
        class="c6"
        href="/web/login"
      >
        Please attempt to log in again.
      </a>
    </div>
  </div>
</div>
`;
